--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
    <div class="container">
     <nav>
      <img src="logo.jpg" class="logo">
-     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Contact</a></li>
+     <ul id="sidemenu">
+      <li><a href="#header">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <i class="fas fa-times" onclick="clossmenu()"></i>
      </ul>
+     <i class="fas fa-bars" onclick="openmenu()"></i>
     </nav>
     <div id="ABC"></div>
      <script language="javascript">
@@ -164,12 +166,13 @@
       <a href="" class="btn btn2">Download CV</a>
      </div>
      <div class="contact-right">
-      <form >
+      <form name="submit-to-google-sheet">
        <input type="text" name="Name" placeholder="Your Name" required>
        <input type="email" name="email" placeholder="Your Email" required>
        <textarea name="message"  rows="6" placeholder="Your Message" required></textarea>
        <button type="submit" class="btn btn2">Submit</button>
       </form>
+      <span id="msg"></span>
      </div>
     </div>
    </div>
@@ -190,6 +193,32 @@
    event.currentTarget.classList.add("active-link")
    document.getElementById(tabname).classList.add("active-tab");
   }
+  </script>
+  <script>
+   var side = document.getElementById("sidemenu");
+   function openmenu(){
+    side.style.right = "0";
+   }
+   function clossmenu(){
+    side.style.right = "-200px";
+   }
+  </script>
+  <script>
+   const scriptURL = 'https://script.google.com/macros/s/AKfycbxoWr2Mhldq-5-kW2_8lBTR9w08N2yZP7DuvKit48Imuf5-y8yrh0mVQS5LnK47CSD_/exec'
+   const form = document.forms['submit-to-google-sheet'];
+   const msg = document.getElementById("msg");
+
+   form.addEventListener('submit', e => {
+    e.preventDefault()
+    fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+     .then(response => {
+      msg.innerHTML = "Message Sent Successfully Thank You"
+      setTimeout(function() {msg.innerHTML = ""
+     }, 5000);
+     form.reset()
+     })
+     .catch(error => console.error('Error!', error.message));
+   })
   </script>
 </body>
 </html>
