--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
    </div>
   </div>
   <!-------My services-->
-  <div class="services">
+  <div id="services">
    <div class="container">
     <h1 class="sub-title">My Services</h1>
     <div class="services-list">
