--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
    </div>
   </div>
   <!--------------Contact------------->
-  <div class="contact">
+  <div id="contact">
    <div class="container">
     <div class="row">
      <div class="contact-left">
